objects/HCR__c.object
<CustomObject>
    <fields>
        <fullName>AccountRecordTypeHCR__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeHCR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Group__r.Account__r.Account_Manager__c</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Group__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exempt_Q1__c</fullName>
        <inlineHelpText>Are There Any Plans That Are EXEMPT?</inlineHelpText>
        <label>Exempt Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_HCR_Q2__c</fullName>
        <inlineHelpText>Does The Client Have Or wWant To Have An Annual Or Lifetime Dollar Limit On ANY Benefit?</inlineHelpText>
        <label>General HCR Q1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_HCR_Q3__c</fullName>
        <inlineHelpText>Is Client Using The Anthem Standard (HCR Compliant) Appeals Process?</inlineHelpText>
        <label>General HCR Q2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_HCR_Q4__c</fullName>
        <inlineHelpText>Has The Group Advised That They Are A Religious Employer Excluding Women&apos;s Contraceptive Coverage?</inlineHelpText>
        <label>General HCR Q3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Q0__c</fullName>
        <inlineHelpText>Are There Any Plans That Are GRANDFATHERED?
Reference Note A</inlineHelpText>
        <label>Grandfathered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Q1__c</fullName>
        <inlineHelpText>If The Client Has Any Plans (Packages, Suffixes, Subgroups) That Are Grandfathered, Has Client Provided Any Written Documentation? (RECOMMENDED)</inlineHelpText>
        <label>Grandfathered Q1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grandfathered_Q0__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Q2__c</fullName>
        <inlineHelpText>Will The Client Notify Anthem Of Any Changes That Could Impact Grandfathered Status?</inlineHelpText>
        <label>Grandfathered Q2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grandfathered_Q0__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Zero_enrollment_Q1__c</fullName>
        <inlineHelpText>Are There Any Plans That Are GRANDFATHERED That Have Zero Enrollment?</inlineHelpText>
        <label>Grandfathered - Zero enrollment Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK(Group__r.Id ), &apos;&apos;, HYPERLINK(Group__r.Id, Group__r.Name))</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>HCRs</relationshipLabel>
        <relationshipName>HCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCR_Details_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HCR Details Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Grandfathered_Q0__c</fullName>
        <inlineHelpText>Are There Any Plans (Packages, Suffixes, Subgroups) That Are NON-GRANDFATHERED?</inlineHelpText>
        <label>Non-Grandfathered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Grandfathered_Q1__c</fullName>
        <inlineHelpText>NGF 2. The CY 2020 INN OOPM is $8,150/$16,300 (or $6,900 Individual/ $13,800 Family For HDHP-HSA Compatible). Does The Group Understand Considerations For All IN-NETWORK Out-Of-Pocket Costs And The Family High Deductible Health Plan?</inlineHelpText>
        <label>Non-Grandfathered Q1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Non_Grandfathered_Q0__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Grandfathered_Q2__c</fullName>
        <inlineHelpText>NGF 3. Does The Group Understand That If A Member Is Part Of An FDA-Approved Clinical Trial For A Life-Threatening Disease, We Will Cover Normal Medical Expenses That Happen During That Trial?</inlineHelpText>
        <label>Non-Grandfathered Q2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Non_Grandfathered_Q0__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HCR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HCR-{0000}</displayFormat>
        <label>General HCR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCRs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>